--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
   
           
                 <div class='new_header'>  
-                    <font color="#d9d9d9">_</font><img src='https://www.paginarapida.com.br/_theme/imgs/d684194f51.jpg' class='cmi_top' alt='Cabeçalho - Página Rápida'></a>  
+                <!-- <font color="#d9d9d9">_</font> -->
+		<center><a><img src='https://www.paginarapida.com.br/_theme/imgs/d684194f51.jpg' class='cmi_top' alt='Cabeçalho - Página Rápida'></a></center>  
                 </div>  
                 
                 <div class='new_content'>  
-                    <p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><b style=""><font color="#d9d9d9">_</font><font color="#525252">Você tem problemas de baixa auto estima, de relacionamento e/ou de dor interior? Gostaria de passar uma hora comigo, para juntos trabalharmos </font><font color="#d9d9d9">_</font><font color="#525252"> e solucionarmos esses problemas, por um preço simbólico que cabe no seu bolso?</b></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><font color="#d9d9d9">_</font><img style="font-family: Arial, Verdana; font-size: 1em;" alt="Zfmnb0h9 o" src="https://images2.imgbox.com/c0/f9/zFmnB0H9_o.png"></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><br></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><b style=""><font color="#d9d9d9">_</font><font color="#525252">Entre em contato, o quanto antes, pois eu só tenho espaço na minha agenda para fazer esse plano com cinco pessoas na próxima semana.</b></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><font style="color: rgb(0, 0, 0); font-family: Arial, Verdana; font-size: 16px;">
+                    <p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><b style=""><font color="#d9d9d9">_</font><font color="#525252">Você tem problemas de baixa auto estima, de relacionamento e/ou de dor interior? Gostaria de passar uma hora comigo, para juntos trabalharmos </font><font color="#d9d9d9">_</font><font color="#525252"> e solucionarmos esses problemas, por um preço simbólico que cabe no seu bolso?</b></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><font color="#d9d9d9">_</font></p>
+		    <center><img style="font-family: Arial, Verdana; font-size: 1em;" alt="Zfmnb0h9 o" src="https://images2.imgbox.com/c0/f9/zFmnB0H9_o.png"></center>
+		    <p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><br></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><b style=""><font color="#d9d9d9">_</font><font color="#525252">Entre em contato, o quanto antes, pois eu só tenho espaço na minha agenda para fazer esse plano com cinco pessoas na próxima semana.</b></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><font style="color: rgb(0, 0, 0); font-family: Arial, Verdana; font-size: 16px;">
 
 <font color="#d9d9d9">_</font><a title="" href="https://wa.me/5573991201070" target="_blank"><img style="font-size: 1em;" alt="Jneudl4c o" src="https://images2.imgbox.com/cf/74/JnEudl4C_o.png"></a>&nbsp;<b style="font-size: 1em;"><font size="3">Fale com Maju Rossi Terapeuta
 
@@ -88,7 +91,8 @@
 <font color="#d9d9d9">_</font>
 <button title="Clique para mostrar/ocultar" onclick="if(document.getElementById('spoiler') .style.display=='none') &#10;{document.getElementById('spoiler') &#10;.style.display=''}else{document.getElementById('spoiler') &#10;.style.display='none'}" type="button">CLIQUE AQUI PARA CONTINUAR LENDO</button><font color="#d9d9d9">____________________</font><br><br>
 
-<a href="https://picasion.com/"><img width="450" height="126" alt="https://picasion.com/" src="https://i.picasion.com/pic92/1747143fa10ed879964c7399f8884f36.gif" border="0"></a><br></p>  
+<!-- <a href="https://picasion.com/"> -->
+<img width="450" height="126" alt="https://picasion.com/" src="https://i.picasion.com/pic92/1747143fa10ed879964c7399f8884f36.gif" border="0"><br></p>  
                 </div>
 
   		<!--
