--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
 		   </style>	  
   
-          
+                <!--
                 <div class='new_header'>  
-                <!-- <font color="#d9d9d9">_</font> -->
-		<center><a><img src='https://www.paginarapida.com.br/_theme/imgs/d684194f51.jpg' class='cmi_top' alt='Cabeçalho - Página Rápida'></a></center>  
+                <font color="#d9d9d9">_</font> -->
+		<div style="text-align: center;"><img src='https://www.paginarapida.com.br/_theme/imgs/d684194f51.jpg' class='cmi_top' alt='Cabeçalho - Página Rápida'><br></div><div style="text-align: center;">  
                 </div>  
                 
                 <div class='new_content'>  
