--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                 <!--
                 <div class='new_header'>  
                 <font color="#d9d9d9">_</font> -->
-		<div style="text-align: center;"><img src='https://www.paginarapida.com.br/_theme/imgs/d684194f51.jpg' class='cmi_top' alt='Cabeçalho - Página Rápida'><br></div><div style="text-align: center;">  
-                </div>  
+	    
+		<!-- Cabeçalho -->
+                <div style="text-align: center;">_____&nbsp;<img src="https://images2.imgbox.com/6f/e0/23JVXdz5_o.jpg" alt="23jvxdz5 o" style="font-size: 1em;"><span style="font-size: 1em;">&nbsp;_____</span></div><div style="text-align: center;"><br></div>  
                 
                 <div class='new_content'>  
                     <p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><b style=""><font color="#d9d9d9">_</font><font color="#525252">Você tem problemas de baixa auto estima, de relacionamento e/ou de dor interior? Gostaria de passar uma hora comigo, para juntos trabalharmos </font><font color="#d9d9d9">_</font><font color="#525252"> e solucionarmos esses problemas, por um preço simbólico que cabe no seu bolso?</b></p><p style="margin: 1em 0px; color: rgb(82, 82, 82) !important; font-family: Quicksand, sans-serif; font-size: 18px; box-sizing: inherit;"><font color="#d9d9d9">_</font></p>
